# upschoolproject

./: .env.example  .gitignore  DEPLOYMENT.md  DesignSystem.md  MVP.md  PRD.md  Plan.md  Progress.md  README.md  SUBMISSION_CHECKLIST.md  docker-compose.yml  plan.md  progress.md  render.yaml  tech-stack.md
backend/: .env.example  Dockerfile  README.md  docker-entrypoint.sh  historial_go.db  pyproject.toml  pytest.ini  requirements.txt  test_historial_go.db
backend/alembic/: env.py
backend/alembic/versions/: b03b7a457a90_baseline_schema.py  cea7936f46e5_fk_lifecycle_moderation.py  d4e8f1a2b3c4_user_preferred_city.py  e7f8a9b0c1d2_region_images_trip_extras.py  f2b3c4d5e6a7_place_visits.py  g3c4d5e6a7b8_premium_requests.py
backend/app/: __init__.py  main.py
backend/app/api/: auth_deps.py  dependencies.py
backend/app/core/: README.md  __init__.py  config.py  exceptions.py  gamification.py  pricing.py  security.py
backend/app/data/: city_landmarks.py  istanbul_district_coords.py  istanbul_places.py  national_routes.py  tr-cities.json  tr-districts.json  tr_cities.py  tr_districts.py
backend/app/db/: bootstrap.py  connection.py  migrate_on_start.py  migration_utils.py
backend/app/middleware/: README.md  rate_limit.py
backend/app/models/: __init__.py  city_model.py  district_model.py  favorite_model.py  guide_offer_model.py  guide_profile_model.py  moderation_model.py  note_model.py  place_model.py  place_visit_model.py  plan_model.py  premium_request_model.py  purchase_model.py  review_model.py  (+6 more)
backend/tests/: README.md  conftest.py  helpers.py  test_api.py
(+443 files in other folders)
