[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.0.0",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.22.1",
    "bcrypt>=4.2.0",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.136.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.3",
    "pyjwt>=2.10.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.45.0",
    "stripe>=11.0.0",
    "edge-tts>=7.0.0",
    "alembic>=1.18.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: isolated unit tests (fast)",
    "integration: HTTP API tests via TestClient",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "app/data/*",
    "app/services/quote_service.py",
    "app/api/routers/quote_routes.py",
    "app/repositories/quote_repository.py",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
